--- a/ThirdAppOp/app/src/main/AndroidManifest.xml
+++ b/ThirdAppOp/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity android:name=".Main2Activity">
             <intent-filter
                 android:icon="@drawable/fire"
-                android:label="Get Text">
+                android:label="Get URI">
                 <data android:scheme="http" android:host="www.udl.cat"/>
 
 
